--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                     <br/><br/>
 					<div class="row to-animate">
 						<div class="col-md-8 col-md-offset-2 subtext single-animate animate-pricing-2">
-							<p style="text-align:left;">We first trained a Logistic Regression model. We removed instances where it was the 2nd inning and after the 14th over to be used as a testing set. Thus our model offers a prediction of a match based on information obtained from the first inning and the first 14 overs of the second, meaning our accuracy results will be higher than a random match prediction made based only on a given pair of teams. Our accuracy results are displayed in a table below along with the highest positive and negative absolute value coefficients for team2. This translates to the teams that team1 performs best (positive) and worst (negative) against.<br/></p>
+							<p style="text-align:left;">We first trained a Logistic Regression model. We removed instances where it was the 2nd inning and after the 14th over to be used as a testing set. Thus our model offers a prediction of a match based on information obtained from the first inning and the first 14 overs of the second, meaning our accuracy results will be higher than a random match prediction made based only on a given pair of teams. Our accuracy results are displayed in a table below along with the highest positive and negative absolute value coefficients for team2. This translates to the teams that team1 performs best (positive) and worst (negative) against. We also include a graph comparing the accuracy results of each model by team.<br/></p>
 						</div>
                     <table align="center" style="width:90%; background-color: white; text-align: center; border: 2px outset #6172F4;">
                         <col width="22%">
@@ -564,6 +564,9 @@
                         <caption style="font-style:italic">Accuracy of Weka's Logistic, NaiveBayes and lBk trained models on test set</caption>
                 </table>
                          <br/>
+                        <img src="images/team_model_accuracy.png" style="width:1200px;height:auto">
+                        <br/>
+                        
                         <!--
 					<div class="row to-animate">
 						<div class="col-md-8 col-md-offset-2 subtext single-animate animate-pricing-2">
@@ -749,7 +752,7 @@
 		<div class="container">
 			<div class="row row-bottom-padded-sm">
 				<div class="col-md-12">
-					<p style="text-align: center;">Project created to fulfill final project requirement for <a href="http://www.northwestern.edu">Northwestern University</a>'s Spring Quarter 2017 EECS 349 Machine Learning class taught by Professor Doug Downey<br/>Contact the creators: <a href="mailto:michaelneuman2020@u.northwestern.edu">Michael Neuman</a> and <a href="mailto:aagamshah2017@u.northwestern.edu">Aagam Shah</p>
+                    <p style="text-align: center;">Project created to fulfill final project requirement for <a href="http://www.northwestern.edu">Northwestern University</a>'s Spring Quarter 2017 EECS 349 Machine Learning class taught by Professor Doug Downey<br/>Contact the creators: <a href="mailto:michaelneuman2020@u.northwestern.edu">Michael Neuman</a> and <a href="mailto:aagamshah2017@u.northwestern.edu">Aagam Shah</a></p>
 				</div>
 			</div>
 		</div>
