--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
                         <br/><br/>
 -->
                         </div>
-                    <div class="col-md-8 col-md-offset-2 subtext single-animate animate-pricing-2" style="text-align:left"><br/>After running each of our models, we obtained some interesting results:
+                    <div class="col-md-8 col-md-offset-2 subtext single-animate animate-pricing-2" style="text-align:left"><br/>After running each of our trained models, we obtained the following results:
                         <ul>
                             <h3 style="font-weight: bold;">Logistic Model Findings</h3> 
                             <li>Chennai Super Kings did not have a strong advantage or disadvantage against any single given team (all team weights were between -1 and 1).</li>
@@ -732,7 +732,7 @@
 					<h2 class="single-animate animate-press-1" style="color:white">Future Work</h2>
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 subtext single-animate animate-press-2">
-							<p style="color:white;text-align:left">Our model only offers predictions based off previous knowledge of statistics from a given match. One possible area for exploration would be to develop a prediction model to take in two specific teams and give the probability that each team could win prior to a match. Looking even deeper, it would be great if a probabilistic model could be used in real-time to see a team's probability during a given match. As the Indian Premier League continues to grow in size and continues through more and more seasons, the right time for developing a great prediction model is sooner rather than later.</p>
+							<p style="color:white;text-align:left">Our model only offers predictions based off previous knowledge of statistics from a given match. One possible area for exploration would be to develop a prediction model to take in two specific teams and give the probability that each team could win prior to a match. Looking even deeper, it would be great if we could develop a probabilistic model that could be used in real-time to see a team's probability during a given match. Currently, our model does not include individual player's statistics as attributes. This is due to lack of a dataset that provides such statistics. One area for future work could be to also include those attributes in our model. This model could then be used by the teams themselves to help them decide which players should be included in a particular match. As the Indian Premier League continues to grow in size and continues through more and more seasons, the right time for developing a great prediction model is now rather than later.</p>
 						</div>
                        
 					</div>
@@ -742,7 +742,7 @@
         </div>
         <div class="row">
         <div class="col-md-4 col-md-offset-4 single-animate animate-features-3">
-            <a href="https://neumanmt.github.io/IPLFinalReport.pdf" target="_blank" class="btn btn-primary btn-block" style="background-color:white; border: 1px solid black; color: #6172F4">Download the final report</a>
+            <a href="https://neumanmt.github.io/IPLFinalReport.pdf" target="_blank" class="btn btn-primary btn-block" style="background-color:white; border: 1px solid black; color: #6172F4">Download our report</a>
         </div>
     </div>
     </div>
